<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="preferences">Options</string>
    <string name="settings">Settings</string>
    <string name="prev">Previous</string>
    <string name="next">Next</string>
    <string name="save">Save</string>
    <string name="custom">Custom</string>
    <string name="training">Training</string>
    <string name="bow">Bow</string>
    <plurals name="arrow">
        <item quantity="one">%d arrow</item>
        <item quantity="other">%d arrows</item>
    </plurals>
    <string name="round">Round</string>
    <string name="points">Points</string>
    <plurals name="passe">
        <item quantity="one">%d end</item>
        <item quantity="other">%d ends</item>
    </plurals>
    <string name="new_training">New training</string>
    <string name="new_bow">New bow</string>
    <string name="new_arrow">New arrow</string>
    <string name="new_round">New round</string>
    <plurals name="training_selected">
        <item quantity="one">%d training selected</item>
        <item quantity="other">%d trainings selected</item>
    </plurals>
    <plurals name="bow_selected">
        <item quantity="one">%d bow selected</item>
        <item quantity="other">%d bows selected</item>
    </plurals>
    <plurals name="arrow_selected">
        <item quantity="one">%d arrow selected</item>
        <item quantity="other">%d arrows selected</item>
    </plurals>
    <plurals name="passe_selected">
        <item quantity="one">%d end selected</item>
        <item quantity="other">%d ends selected</item>
    </plurals>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="statistic">Statistics</string>
    <string name="share">Share</string>
    <string name="dispersion_pattern">Dispersion pattern</string>
    <string name="sign_up_with_mantis" translatable="false">Sign-up with Mantis</string>
    <string name="sharing_failed">Sharing failed!</string>
    <string name="send_exported">Send exported data</string>
    <string name="exporting_failed">Exporting failed!</string>
    <string name="add_bow">Add bow</string>
    <string name="name">Name</string>
    <string name="bow_type">Bow type</string>
    <string name="properties">Properties</string>
    <string name="brand">Brand</string>
    <string name="size">Size</string>
    <string name="description">Description</string>
    <string name="height">Brace height</string>
    <string name="tiller">Tiller</string>
    <string name="sight_settings">Sight settings</string>
    <string name="add">Add</string>
    <string name="take_picture">Take a picture</string>
    <string name="pick_from_gallery">Select a picture from gallery</string>
    <string name="add_arrow">Add arrow</string>
    <string name="length">Length</string>
    <string name="spine">Spine</string>
    <string name="weight">Weight</string>
    <string name="vanes">Vanes</string>
    <string name="nock">Nock</string>
    <string name="material">Material</string>
    <string name="title">Title</string>
    <string name="outdoor">Outdoor</string>
    <string name="indoor">Indoor</string>
    <string name="distance">Distance</string>
    <string name="format">Format</string>
    <string name="with">of</string>
    <string name="target_face">Target face</string>
    <string name="scoreboard">Scoreboard</string>
    <string name="arrows">Arrows</string>
    <string name="sum">Score</string>
    <string name="carry">R.Total</string>
    <string name="action_print">Print</string>
    <string name="average">Average</string>
    <string name="avg_symbol">Ø</string>
    <string name="handicap_symbol">∑</string>
    <string name="comment">Comment</string>
    <string name="select_a_file">Select a file</string>
    <string name="dir_not_created">Directory could not be created!</string>
    <string name="import_failed">Import failed!</string>
    <string name="file_not_found">File not found!</string>
    <string name="failed_reading_file">Failed reading file!</string>
    <string name="donate_2">Donate me a burger</string>
    <string name="donate_5">Donate me a kebab</string>
    <string name="donate_10">Donate me a large pizza</string>
    <string name="donate_20">Donate me some fuel</string>
    <string name="donation_thank">Thank you for your support!</string>
    <string name="donate_text" formatted="false">The amounts are incl. VAT and 30% fees for Google.</string>
    <string name="timer">Timer</string>
    <string name="touch_to_start">Touch to start</string>
    <string name="preparation">Get ready</string>
    <string name="shooting">Shooting</string>
    <string name="timer_shooting_time">Shooting Time</string>
    <string name="timer_waiting_time">Prepare Time</string>
    <string name="timer_warning_time">Warning Time</string>
    <string name="timer_sound">Sound</string>
    <string name="timer_vibrate">Vibrate</string>
    <string name="backup_action">Backup</string>
    <string name="migrate_action" translatable="false">Migrate</string>
    <string name="import_action">Import</string>
    <string name="exports_as_csv">Exports as csv</string>
    <string name="licences">Open Source-Licences</string>
    <string name="licences_summary">Legal notes to licences</string>
    <string name="version">Version %s</string>
    <plurals name="second">
        <item quantity="one">%d second</item>
        <item quantity="other">%d seconds</item>
    </plurals>
    <string name="info">Information</string>
    <string name="data">Data</string>
    <string name="weather">Weather</string>
    <string name="environment">Environment</string>
    <string name="wind_speed">Wind speed</string>
    <string name="wind_direction">Wind direction</string>
    <string name="sight_setting_removed">Sight setting deleted!</string>
    <string name="metric">Metric</string>
    <string name="imperial">Imperial</string>
    <string name="undo">Undo</string>
    <string name="standard_rounds">Standard rounds</string>
    <string name="expand_collapse">Expand/Collapse</string>
    <string name="new_round_template">New template</string>
    <string name="arrow_numbers">Arrow numbers</string>
    <string name="round_removed">Round deleted!</string>
    <string name="custom_round">Custom round</string>
    <string name="filter">Filter</string>
    <string name="club">Club</string>
    <string name="target">Target</string>
    <string name="standard_round">Standard round</string>
    <string name="use_as_template">Use as template?</string>
    <string name="create_copy">This is a standard round!\nDo you want to create a copy in order to edit it?</string>
    <string name="practice">Practice</string>
    <string name="edit_training">Edit Training</string>
    <string name="edit_standard_round">Edit Standard Round</string>
    <plurals name="arrow_deleted">
        <item quantity="one">%d arrow deleted</item>
        <item quantity="other">%d arrows deleted</item>
    </plurals>
    <plurals name="bow_deleted">
        <item quantity="one">%d bow deleted</item>
        <item quantity="other">%d bows deleted</item>
    </plurals>
    <plurals name="training_deleted">
        <item quantity="one">%d training deleted</item>
        <item quantity="other">%d trainings deleted</item>
    </plurals>
    <plurals name="passe_deleted">
        <item quantity="one">%d end deleted</item>
        <item quantity="other">%d ends deleted</item>
    </plurals>
    <plurals name="rounds">
        <item quantity="one">Round %d</item>
        <item quantity="other">Round %d</item>
    </plurals>
    <plurals name="round_selected">
        <item quantity="one">%d round selected</item>
        <item quantity="other">%d rounds selected</item>
    </plurals>
    <plurals name="round_deleted">
        <item quantity="one">%d round deleted</item>
        <item quantity="other">%d rounds deleted</item>
    </plurals>
    <string name="date">Date</string>
    <string name="edit_round">Edit round</string>
    <string name="draw_weight">Draw weight</string>
    <string name="sight">Sight</string>
    <string name="limbs">Limbs</string>
    <string name="my_bow">My bow</string>
    <string name="my_arrow">My arrow</string>
    <string name="tip_weight">Tip weight</string>
    <string name="arrow_ranking">Arrow ranking</string>
    <string name="arrow_x_of_set_of_arrows">Arrow %1$s of %2$s</string>
    <string name="display">Display</string>
    <string name="print">Print</string>
    <string name="table">Table</string>
    <string name="comments">Comments</string>
    <string name="show_points_colored">Show points colored</string>
    <string name="stabilizer">Stabilizer</string>
    <string name="clicker">Clicker</string>
    <string name="arrow_number_x">Arrow number %s</string>
    <string name="training_with_standard_round">Training with Standard Round</string>
    <string name="train_with_the_x8" translatable="false">Train with the X8</string>
    <string name="free_training">Free Training</string>
    <string name="competition">Competition</string>
    <string name="about">About</string>
    <string name="general">General</string>
    <string name="license_epl_name" translatable="false">Eclipse Public License - v 1.0</string>
    <string name="license_epl_url" translatable="false">https://www.eclipse.org/org/documents/epl-v10.php</string>
    <string name="contribute">Contribute</string>
    <string name="connect">Connect</string>
    <string name="special_thanks_to">Special thanks to</string>
    <string name="all_translators">All guys, who helped translating the app!</string>
    <string name="initial_desc" translatable="false">So you\'ve been tracking your training with MyTargets for a while now, and you\'re probably feeling like you\'re a pretty descent archer and maybe want to take things to the next level? Suddenly you\'ve noticed this new "Train with mantis X8" button. What the hell is this supposed to be? Imagine if we got a bunch of data geeks and hardware engineers that normally work on UAV stabilization systems to get really into archery...</string>
    <string name="mantis_desc_1" translatable="false">The Mantis X8 is a hardware sensor, which attaches to your bow, to give you additional data and insights into your shooting performance.</string>
    <string name="mantis_desc_2" translatable="false">At its core, the X8 is a precision sensor that records all of the movements of the shooter before the arrow flies. The X8 analyzes thousands of data points per second, sending the data to the app, and providing real-time feedback on your shooting performance. So now you\'re able to not only track where the arrows land, but why they landed where they did.</string>
    <string name="mantis_desc_3" translatable="false">The Mantis X8 is designed to answer questions that were previously unanswerable: what about that shot was different? How consistent am I? My body and mind say one thing, but what actually happened?</string>
    <string name="mantis_desc_4" translatable="false">The X8 may change the way you shoot. It certainly will change the way you understand your shooting.</string>
    <string name="upgrade_button" translatable="false">Upgrade to The Mantis X8</string>
    <string name="testimonial_string" translatable="false"><b>Testimonials</b></string>
    <string name="user_one_name" translatable="false"><b>Brady</b></string>
    <string name="user_one_response" translatable="false">The Mantis X8 is a game changer.  It helps any shooter, at any level improve.  This is a must-have for anyone serious about maximizing their performance.</string>
    <string name="user_two_name" translatable="false"><b>Toja</b></string>
    <string name="user_two_response" translatable="false">If you aren\'t training with the X8, you\'re missing insights that will fine-tune every aspect of your shot.</string>
    <string name="learn_more_button" translatable="false">Learn More</string>
</resources>